--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0"
+    },
+    "dependencies": {
+        "bootstrap-sass": "^3.4.1",
+        "gulp": "^3.9.1",
+        "jquery": "^3.4.1",
+        "laravel-elixir": "^6.0.0-18"
     }
 }
