--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^8.0",
+        "ext-pdo_sqlite": "*"
     },
     "config": {
         "optimize-autoloader": true,
